--- a/lib/q_blender_web/controllers/page_html/home.html.heex
+++ b/lib/q_blender_web/controllers/page_html/home.html.heex
@@ -217,6 +217,12 @@
         justify-content: center;
         align-items: center;
       }
+      
+      @media (min-width: 1024px) {
+        #h-logo {
+          width: 38%;
+        }
+      }
 
       .status-indicator {
         position: absolute;
